--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,74 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# dependencies
-/node_modules
-/.pnp
-.pnp.js
+# Android/IntelliJ
+build/
+.idea
+.gradle
+local.properties
+*.iml
 
-# testing
-/coverage
+# BUCK
+buck-out/
+\.buckd/
+*.keystore
+!debug.keystore
 
-# production
-/build
+# Bundle artifact
+*.jsbundle
 
-# misc
-.DS_Store
+# CocoaPods
+/ios/Pods/
+
+# Environmental variables
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
 
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+# fastlane
+#
+# It is recommended to not store the screenshots in the git repo. Instead, use fastlane to re-generate the
+# screenshots whenever they are needed.
+# For more information about the recommended setup visit:
+# https://docs.fastlane.tools/best-practices/source-control/
+*/fastlane/report.xml
+*/fastlane/Preview.html
+*/fastlane/screenshots
+
+# Node.js
+node_modules/
+npm-debug.log
+package-lock.json
+
+# OSX
+.DS_Store
+
+# Patterns and Practices
+/.pnp
+.pnp.js
+
+# Visual Studio Code
+.vscode/
+
+# Xcode
+build/
+*.pbxuser
+!default.pbxuser
+*.mode1v3
+!default.mode1v3
+*.mode2v3
+!default.mode2v3
+*.perspectivev3
+!default.perspectivev3
+xcuserdata
+*.xccheckout
+*.moved-aside
+DerivedData
+*.hmap
+*.ipa
+*.xcuserstate
+project.xcworkspace
+
+# Yarn
+yarn.lock
+yarn-error.log
